@@ -1,5 +1,5 @@
 /*
-  Copyright (c) 2010 Gordon Gremme <gremme@zbh.uni-hamburg.de>
+  Copyright (c) 2010-2011 Gordon Gremme <gremme@zbh.uni-hamburg.de>
 
   Permission to use, copy, modify, and distribute this software for any
   purpose with or without fee is hereby granted, provided that the above
@@ -26,6 +26,7 @@ typedef struct GtIDToMD5Stream GtIDToMD5Stream;
 
 /* Create a GtIDToMD5Stream, takes ownership of <region_mapping>. */
 GtNodeStream* gt_id_to_md5_stream_new(GtNodeStream *in_stream,
-                                      GtRegionMapping *region_mapping);
+                                      GtRegionMapping *region_mapping,
+                                      bool substitute_target_ids);
 
 #endif
