@@ -12,6 +12,7 @@ changes in version 1.3.8 (2011-02-02)
 - file suffix of bioseq raw files has been changed from ".gt_bsr" to ".bsr"
 - the tool `gt filter` has been renamed to `gt select`. The same functionality
   is still available with `gt filter` in order not to break existing scripts
+- `gt id_to_md5` has new option -subtargetids
 
 
 changes in version 1.3.7 (2011-01-28)
